Fix: Corrected package versions and model initialization

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
     "name": "kanasu_bee_house",
     "version": "1.0.0",
     "type": "module",
+    "main": "server.js",
     "scripts": {
         "start": "node server.js"
     },
     "dependencies": {
-        "@google/generative-ai": "^0.x.x",
+        "@google/generative-ai": "^0.21.0",
         "cors": "^2.8.5",
-        "dotenv": "^16.x.x",
-        "express": "^4.x.x"
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2"
     }
 }
